--- a/jeep-demo/css/jeep-demo.css
+++ b/jeep-demo/css/jeep-demo.css
@@ -51,13 +51,15 @@ transform: translate(-50%,-50%);
     position: absolute;
     width: 1646px;
     height: 800px;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    -webkit-transform: translate(-50%,-50%);
-    -moz-transform: translate(-50%,-50%);
-    -ms-transform: translate(-50%,-50%);
-    -o-transform: translate(-50%,-50%);
+    min-width: 1646px;
+    min-height: 800px;
+    top: 400px;
+    left: 823px;
+    transform: translate(-823px, -400px);
+    -webkit-transform: translate(-823px,-400px);
+    -moz-transform: translate(-823px,-400px);
+    -ms-transform: translate(-823px,-400px);
+    -o-transform: translate(-823px,-400px);
     /* border-style: solid;
     border-width: 5px;
     border-color: red; */
