--- a/jeep-demo/css/jeep-demo.css
+++ b/jeep-demo/css/jeep-demo.css
@@ -178,6 +178,18 @@ div {
   margin-left: 50px;
 }
 
+.logwin #wintitle {
+  text-decoration: none;
+  color: #818181;
+  display: block;
+  transition: 0.3s;
+  position: absolute;
+  top: 0;
+  left: 10px;
+  font-size: 36px;
+  margin-left: 0px;
+}
+
 #content {
   padding:2px;
   width: 100%;
